--- a/style.css
+++ b/style.css
@@ -4,3 +4,34 @@
  padding: 0;
 }
 
+h2 {
+  color: #495057;
+}
+a {
+  text-decoration: none;
+  color: #495057;
+}
+
+.container {
+  max-width: 1336px;
+  margin-inline: auto;
+}
+
+.block-popular {
+  padding: 5rem 0;
+  margin-inline: 2rem;
+}
+.block-popular__nav {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 2rem;
+  /* margin-inline: 2rem; */
+  
+}
+
+.left-nav {
+  display: flex;
+  justify-content: flex-start;
+  gap: 1rem;
+  list-style-type: none;
+}
