--- a/style.css
+++ b/style.css
@@ -4,106 +4,6 @@
  padding: 0;
 }
 
-h2 {
-  color: #495057;
-}
-a {
-  text-decoration: none;
-  color: #495057;
-}
-
-.container {
-  max-width: 1336px;
-  margin-inline: auto;
-}
-
-.block-popular {
-  padding: 5rem 0;
-  margin-inline: 2rem;
-}
-.block-popular__nav {
-  display: flex;
-  justify-content: space-between;
-  padding-top: 2rem;
-  /* margin-inline: 2rem; */
-  
-}
-
-.left-nav {
-  display: flex;
-  justify-content: flex-start;
-  gap: 1rem;
-  list-style-type: none;
-  margin-top: 30px;
-  margin-left: 70px;
-}
-
-.block-popular__right-nav {
-  flex: right;
-  width: 70px;
-  height: 25px;
-  margin-top: 30px;
-  margin-left: 850px;
-}
-
-.Popular-card-section {
-  width: 1300px;
-  height: 950px;
-  margin-top: 30px;
-  margin-left: 70px;
-}
-.Popular-card {
-  width: 310px;
-  height: 450px;
-  margin-top: 30px;
-  /* padding-right: 4px; */
-  /* display: flex; */
-  float: left;
-}
-
-.Popular-card-1 {
-  width: 310px;
-  height: 450px;
-  margin-top: 30px;
-  margin-left: 20px;
-  /* padding-right: 4px; */
-  /* display: flex; */
-  float: left;
-}
-
-.Popular-card-date {
-  width: 59px;
-  height: 15px;
-  margin-top: 15px;
-  font: lora;
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 15.36px;
-  color: #6C757D;
-}
-
-.Popular-card-header {
-  width: 273px;
-  height: 50px;
-  margin-top: 15px;
-  font: lora;
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 25px;
-  color: #495057;
-}
-
-.Popular-card-description {
-  width: 310px;
-  height: 60px;
-  margin-top: 15px;
-  font: lora;
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 20px;
-  color: #6C757D;
-}
-
 .block-hero {
   background-image: url("./assets/images/hero-bg.jpg");
   background-size: cover;
@@ -162,7 +62,7 @@ a {
   border: 1px solid #E5E5E5
  }
 
- .block-hero-description {
+ .block-hero-content {
   width: 420px;
   height: 40px;
   margin-left: 10px;
@@ -191,8 +91,8 @@ a {
   h2 {
     width: 249px;
     height: 46px;
-    margin-top: 150px;
-    margin-left: 70px;
+    /* margin-top: 150px;
+    margin-left: 70px; */
     font: lora;
     font-weight: 700;
     font-size: 36px;
@@ -200,5 +100,78 @@ a {
     color: #495057;
   }
 
+.block-popular-container {
+  max-width: 1300px;
+  max-height: 1081px;
+  margin-top: 150px;
+  margin-left: 70px;
+}
+
+.block-popular__nav {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 30px;
+  text-decoration: none;
+  
+}
+
+.left-nav {
+  display: flex;
+  gap: 1rem;
+  margin-top: 0px;
+  justify-content: flex-start;
+  text-decoration: none;
+}
+
+.right-nav {
+  margin-left: 850px;
+  margin-top: 30px;
+  text-decoration: none;
+}
+
+.Popular-card-section {
+  width: 1300px;
+  height: 950px;
+  margin-top: 30px;
+  display: flex;
+  gap: 1rem;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+}
+
+.Popular-card {
+  width: 310px;
+  height: 450px;
+}
+
+.Popular-card-date {
+  width: 59px;
+  height: 15px;
+  margin-top: 15px;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 15.36px;
+  color: #6C757D;
+}
+
+.Popular-card-header {
+  width: 273px;
+  height: 50px;
+  margin-top: 15px;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 25px;
+  color: #495057;
+}
+
+.Popular-card-description {
+  width: 310px;
+  height: 60px;
+  margin-top: 15px;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 20px;
+  color: #6C757D;
+}
   
 
