--- a/style.css
+++ b/style.css
@@ -124,6 +124,7 @@
   color: #495057;
 }
 
+
 .right-nav {
   margin-left: 850px;
   margin-top: 30px;
@@ -176,6 +177,7 @@
   
 a {
   text-decoration: none;
+  color: #E5E5E5;
 }
 
 .fashion-container {
@@ -262,6 +264,7 @@ a {
 }
 
 .editor-pick-card-section {
+  width: 100%;
   margin-top: 70px;
   margin-left: 70px;
   display: flex;
@@ -508,5 +511,42 @@ a {
   font-size: 14px;
   line-height: 17.92px;
   text-align: right;
+  color: #E5E5E5;
+}
+
+nav {
+  width: 100%;
+  height: 80px;
+  background-color: #00000033;
+  display: flex;
+  flex-wrap: wrap;
+  position: absolute;
+}
+
+label.logo {
+  width: 69px;
+  height: 22px;
+  padding-top: 29px;
+  padding-left: 70px;
+  font: spartan;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 22.4px;
+  color: #F8F9FA;
+}
+
+nav ul {
+  display: flex;
+  flex-wrap: wrap;
+  padding-top: 33px;
+  padding-left: 727px;
+  gap: 18px;
+  list-style: none;
+}
+
+nav ul li {
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 14.06px;
   color: #E5E5E5;
 }
