--- a/style.css
+++ b/style.css
@@ -137,7 +137,7 @@ a {
 }
 
 .Popular-card {
-  width: 25%;
+  width: 100%;
   padding-left: 15px;
   padding-right: 15px;
 }
@@ -148,21 +148,21 @@ a {
   border-radius: 30px;
 }
 
-@media (max-width: 1024px) {
+@media only screen and (min-width: 640px) {
   .Popular-card {
-    width: 33.33% !important;
+    width: 50%;
   }
 }
 
-@media (max-width: 755px) {
+@media only screen and (min-width: 768px) {
   .Popular-card {
-    width: 50% !important;
+    width: 33.33%;
   }
 }
 
-@media (max-width: 500px) {
+@media only screen and (min-width: 1024px) {
   .Popular-card {
-    width: 100% !important;
+    width: 25%;
   }
 }
 
