--- a/style.css
+++ b/style.css
@@ -4,17 +4,17 @@
  padding: 0;
 }
 
-.site-wrapper {
+/* .site-wrapper {
   margin-left: 1em;
   margin-right: 1em;
-}
+} */
 
 .hero-image {
   background-image: url("./assets/images/hero-bg.jpg");
   background-size: cover;
-  height: 600px;
-  border: 1px 0px 0px 0px;
-  border: 1px solid #E5E5E5
+  background-position: center;
+  border: 1px solid #E5E5E5;
+  background-repeat: no-repeat;
 }
 
 .hero-btn {
@@ -28,7 +28,6 @@
   line-height: 11.72px;
   text-align: center;
   margin-top: 278px;
-  margin-left: 70px;
   color: #FFFFFF;
   border-radius: 15px;
   border-style: none;
@@ -50,8 +49,6 @@ h1 {
   display: flex;
   flex-wrap: wrap;
   margin-top: 15px;
-  margin-left: 70px;
-  gap: 10px;
 }
 
 .hero-date {
@@ -83,13 +80,11 @@ h1 {
 .block-hero-circle {
   width: 44px;
   height: 8px;
-  margin-left: 70px;
   margin-top: 62px;
   }
 
 .block-popular {
   margin-top: 150px;
-  margin-inline: 70px;
 }
 
 
@@ -105,6 +100,7 @@ h1 {
   justify-content: space-between;
   text-align: center;
   padding-top: 30px;
+  flex-wrap: wrap;
 }
 
 .left-nav {
@@ -114,6 +110,7 @@ h1 {
   justify-content: flex-start;
   list-style: none;
   color: #495057;
+  flex-wrap: wrap;
 }
 
 .right-nav {
@@ -146,6 +143,12 @@ a {
   width: 100%;
   height: auto;
   border-radius: 30px;
+}
+
+@media only screen and (min-width: 200px) {
+  .Popular-card {
+    width: 100%;
+  }
 }
 
 @media only screen and (min-width: 640px) {
@@ -196,7 +199,6 @@ a {
 .fashion-container {
   background-image: url("./assets/images/fashion-bg.jpg");
   background-size: cover;  
-  height: 600px;
   margin-top: 149px;
   display: flex;
   justify-content: center;
@@ -205,6 +207,7 @@ a {
 .fashion-container-wrap {
   max-width: 530px;
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   flex-direction: column;
   text-align: center;
@@ -213,7 +216,6 @@ a {
 .fashion-btn {
   max-width: 62px;
   padding: 5px 10px 5px 10px;
-  gap: 10px;
   margin-inline: auto;
   background-color: #FFFFFF26;
   font-size: 10px;
@@ -245,7 +247,7 @@ a {
 }
 
 .fashion-line {
-  width: 30px;
+  max-width: 30px;
   margin-inline: auto;
   margin-top: 24px;
   border: 1px solid #E5E5E5
@@ -269,7 +271,6 @@ a {
 }
 
 .Editor-Pick-container {
-  margin-inline: 70px;
   margin-top: 149px;
 }
 
@@ -286,42 +287,18 @@ a {
   background-image: url("./assets/images/editor-blog-bg-1.jpg");
   padding-left: 20px;
   padding-right: 20px;
-  width: 33.33%;
-}
-
-@media (max-width: 1024px) {
-  .editor-pick-card-1 {
-    width: 50% !important;
-  }
-}
-
-@media (max-width: 1024px) {
-  .editor-pick-card-2 {
-    width: 50% !important;
-  }
-}
-
-@media (max-width: 1024px) {
-  .editor-pick-card-3 {
-    width: 50% !important;
-  }
-}
-
-@media (max-width: 800px) {
-  .editor-pick-card-3 {
-    width: 100% !important;
-  }
-}
-
-@media (max-width: 800px) {
-  .editor-pick-card-2 {
-    width: 100% !important;
-  }
+  width: 100%;
 }
 
 @media (max-width: 800px) {
   .editor-pick-card-1 {
-    width: 100% !important;
+    width: 100% ;
+  }
+}
+
+@media (max-width: 1024px) {
+  .editor-pick-card-1 {
+    width: 50% ;
   }
 }
 
@@ -329,20 +306,47 @@ a {
   background-image: url("./assets/images/editor-blog-bg-2.jpg");
   padding-left: 20px;
   padding-right: 20px;
-  width: 33.33%;
+  width: 100%;
+}
+
+
+@media (max-width: 800px) {
+  .editor-pick-card-2 {
+    width: 100% ;
+  }
+}
+
+@media (max-width: 1024px) {
+  .editor-pick-card-2 {
+    width: 50% ;
+  }
 }
 
 .editor-pick-card-3 {
   background-image: url("./assets/images/editor-blog-bg-3.jpg");
   padding-left: 20px;
   padding-right: 20px;
-  width: 33.33%;
+  width: 100%;
 }
+
+
+@media (max-width: 800px) {
+  .editor-pick-card-3 {
+    width: 100% ;
+  }
+}
+
+@media (max-width: 1024px) {
+  .editor-pick-card-3 {
+    width: 50% ;
+  }
+}
+
+
 
 .editor-pick-date {
   width: 59px;
   padding-top: 153px;
-  padding-left: 40px;
   font-weight: 400;
   font-size: 12px;
   line-height: 15.36px;
@@ -352,7 +356,6 @@ a {
 .editor-pick-card-header {
   max-width: 270px;
   padding-top: 15px;
-  padding-left: 40px;
   font-weight: 700;
   font-size: 18px;
   line-height: 25px;
@@ -362,7 +365,6 @@ a {
 .editor-pick-card-description {
   max-width: 340px;
   padding-top: 15px;
-  padding-left: 40px;
   font-weight: 400;
   font-size: 12px;
   line-height: 20px;
@@ -393,16 +395,14 @@ a {
 }
 
 .footer-Explorate {
-  width: 115px;
-  height: 188px;
+  max-width: 115px;
   margin-top: 99px;
   /* margin-left: 142px; */
   list-style: none;
 }
 
 .footer-headquarter {
-  width: 114px;
-  height: 100px;
+  max-width: 114px;
   /* margin-top: 106px; */
   /* margin-left: 229px; */
   list-style: none;
@@ -410,8 +410,7 @@ a {
 
 
 .footer-connection {
-  width: 172px;
-  height: 60px;
+  max-width: 172px;
   margin-top: -31px;
   /* margin-left: 216px; */
   list-style: none;
@@ -521,8 +520,7 @@ a {
 }
 
 .footer-social-media-logos {
-  width: 172px;
-  height: 20px;
+  max-width: 172px;
   padding-top: 15px;
 }
 
@@ -541,10 +539,8 @@ a {
 }
 
 .copyright {
-  width: 198px;
-  height: 18px;
+  max-width: 198px;
   /* margin-top: 31px; */
-  margin-left: 70px;
   font: lora;
   font-weight: 700;
   font-size: 14px;
@@ -553,8 +549,7 @@ a {
 }
 
 .Subscribe {
-  width: 98px;
-  height: 18px;
+  max-width: 98px;
   /* margin-top: 31px;
   margin-left: 1004px; */
   font: lora;
@@ -567,7 +562,6 @@ a {
 
 nav {
   width: 100%;
-  height: 80px;
   background-color: #00000033;
   display: flex;
   flex-wrap: wrap;
@@ -576,10 +570,9 @@ nav {
 }
 
 label.logo {
-  width: 69px;
+  max-width: 69px;
   /* height: 22px; */
   padding-top: 29px;
-  padding-left: 70px;
   font: spartan;
   font-weight: 700;
   font-size: 20px;
@@ -591,8 +584,6 @@ nav ul {
   display: flex;
   flex-wrap: wrap;
   padding-top: 33px;
-  padding-right: 70px;
-  gap: 18px;
   list-style: none;
 }
 
