--- a/style.css
+++ b/style.css
@@ -13,10 +13,9 @@
 }
 
 .hero-btn {
-  width: 77px;
-  height: 22px;
+  max-width: 77px;
   background-color: #FFFFFF26;
-  padding-top: 5px 10px 5px 1opx;
+  padding: 5px 10px 5px 1opx;
   font-family: Roboto;
   font-size: 10px;
   font-weight: 700;
@@ -31,7 +30,6 @@
 h1 {
   max-width: 530px;
   margin-top: 15px;  
-  margin-left: 37px;
   font-family: Lora;
   font-size: 36px;
   font-weight: 700;
@@ -48,7 +46,6 @@ h1 {
 
 .hero-date {
   width: 59px;
-  height: 15px;
   font-family: Lora;
   font-size: 12px;
   font-weight: 400;
@@ -73,8 +70,7 @@ h1 {
 }
 
 .block-hero-circle {
-  width: 44px;
-  height: 8px;
+  max-width: 44px;
   margin-top: 62px;
   }
 
@@ -100,8 +96,6 @@ h1 {
 
 .left-nav {
   display: flex;
-  gap: 1rem;
-  margin-top: 0px;
   justify-content: flex-start;
   list-style: none;
   color: #495057;
@@ -116,7 +110,7 @@ a {
 .Popular-card-section {
   margin-top: 30px;
   margin-left: -15px;
-  margin-right: -15px;
+  /* margin-right: -15px; */
   display: flex;
   justify-content: flex-start;
   flex-wrap: wrap;
@@ -125,7 +119,7 @@ a {
 .Popular-card {
   width: 100%;
   padding-left: 15px;
-  padding-right: 15px;
+  /* padding-right: 15px; */
 }
 
 .Popular-card img {
@@ -527,7 +521,6 @@ a {
 
 .Subscribe {
   max-width: 98px;
-  
   font: lora;
   font-weight: 400;
   font-size: 14px;
