--- a/style.css
+++ b/style.css
@@ -4,6 +4,46 @@
  padding: 0;
 }
 
+
+
+.container {
+  /* min-width: 320px; */
+  margin: 0 auto;
+  padding: 20px;
+}
+
+@media (max-width: 1400px) {
+  .container {
+    max-width: 1320px;
+  }
+}
+
+@media (max-width: 1200px) {
+  .container {
+    max-width: 1140px;
+  }
+}
+
+@media (max-width: 992px) {
+  .container {
+    max-width: 960px;
+  }
+}
+
+@media (max-width: 768px) {
+  .container {
+    max-width: 720px;
+  }
+}
+
+@media (max-width: 576px) {
+  .container {
+    max-width: 556px;
+  }
+}
+
+
+
 .hero-image {
   background-image: url("./assets/images/hero-bg.jpg");
   background-size: cover;
@@ -266,7 +306,6 @@ a {
 }
 .editor-pick-card-1 {
   background-image: url("./assets/images/editor-blog-bg-1.jpg");
-  width: 100%;
 }
 
 /* @media (max-width: 800px) {
@@ -285,7 +324,6 @@ a {
   background-image: url("./assets/images/editor-blog-bg-2.jpg");
   /* padding-left: 20px;
   padding-right: 20px; */
-  width: 100%;
 }
 
 
@@ -305,7 +343,6 @@ a {
   background-image: url("./assets/images/editor-blog-bg-3.jpg");
   /* padding-left: 20px;
   padding-right: 20px; */
-  width: 100%;
 }
 
 
@@ -356,12 +393,15 @@ a {
 
 .footer-top-section {
   width: 100%;
+  background-color: #212529;
   height: 400px;
+}
+
+.footer-top-section-wrapper {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
   align-items: center;
-  background-color: #212529;
 }
 
 .footer-contact-pulisher {
@@ -499,15 +539,17 @@ a {
   padding-top: 15px;
 }
 
-
 .footer-lower-section {
   width: cover;
   height: 80px;
+  background-color: #343A40;
+}
+
+.footer-lower-section-wrapper {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
-  background-color: #343A40;
 }
 
 .copyright {
