--- a/style.css
+++ b/style.css
@@ -4,7 +4,72 @@
  padding: 0;
 }
 
+nav {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  /* position: absolute; */
+  justify-content: space-between;
+  background-color:   #afb3b8;
+}
 
+.header-content {
+  /* min-width: 320px; */
+  margin: 0 auto;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+@media (max-width: 1400px) {
+  .header-content {
+    max-width: 1320px;
+  }
+}
+
+@media (max-width: 1200px) {
+  .header-content {
+    max-width: 1140px;
+  }
+}
+
+@media (max-width: 992px) {
+  .header-content {
+    max-width: 960px;
+  }
+}
+
+@media (max-width: 768px) {
+  .header-content {
+    max-width: 720px;
+  }
+}
+
+@media (max-width: 576px) {
+  .header-content {
+    max-width: 556px;
+  }
+}
+label.logo {
+  max-width: 69px;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 22.4px;
+  color: #F8F9FA;
+}
+
+nav ul {
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  gap: 10px;
+}
+
+nav ul li {
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 14.06px;
+  color: #E5E5E5; 
+}
 
 .container {
   /* min-width: 320px; */
@@ -86,18 +151,19 @@ h1 {
 }
 
 .hero-date {
-  width: 59px;
-  font-family: Lora;
+  max-width: 59px;
   font-size: 12px;
   font-weight: 400;
   line-height: 15.36px;
   color: #E5E5E5;
+  padding-right: 5px;
 }
 
 .hero-line {
   width: 30px;
   height: 1px;
   margin-top: 5px;
+  margin-right: 5px;
   border: 1px solid #E5E5E5
 }
 
@@ -141,6 +207,7 @@ h1 {
   list-style: none;
   color: #495057;
   flex-wrap: wrap;
+  gap: 10px;
 }
 
 a {
@@ -223,7 +290,8 @@ a {
 
 .fashion-container {
   background-image: url("./assets/images/fashion-bg.jpg");
-  background-size: cover;  
+  background-size: cover; 
+  background-position: center; 
   display: flex;
   justify-content: center;
   margin-bottom: 50px;
@@ -231,6 +299,8 @@ a {
 
 .fashion-container-wrap {
   max-width: 530px;
+  padding-top: 170px;
+  padding-bottom: 170px;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -272,7 +342,7 @@ a {
 }
 
 .fashion-line {
-  max-width: 30px;
+  padding-left: 40px;
   margin-inline: auto;
   margin-top: 24px;
   border: 1px solid #E5E5E5
@@ -293,73 +363,77 @@ a {
   font-size: 36px;
   line-height: 46.08px;
   color: #495057;
-}
-
-.Editor-Pick-container {
-  margin-bottom: 50px;
+  margin-bottom: 40px;
 }
 
 .editor-pick-card-section {
-  margin-top: 40px;
   display: flex;
   flex-wrap: wrap;
-  justify-content: flex-start;
-  
+  justify-content:center;
+  margin-left: -15px;
+  margin-right: -15px;
 }
+
+.editor-pick-card {
+  width: 100%;
+  height: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-bottom: 30px;
+  display: block;
+
+}
+
+/* @media only screen and (min-width: 200px) {
+  .editor-pick-card {
+    width: 100%;
+    display: block;
+  }
+} */
+
+@media only screen and (min-width: 640px) {
+  .editor-pick-card {
+    width: 50%;
+    display: block;
+
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .editor-pick-card {
+    width: 50%;
+  }
+}
+
+@media only screen and (min-width: 1024px) {
+  .editor-pick-card {
+    width: 33.33%;
+  }
+}
+
 .editor-pick-card-1 {
   background-image: url("./assets/images/editor-blog-bg-1.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  padding: 40px;
 }
-
-/* @media (max-width: 800px) {
-  .editor-pick-card-1 {
-    width: 100% ;
-  }
-} */
-
-/* @media (max-width: 1024px) {
-  .editor-pick-card-1 {
-    width: 50% ;
-  }
-} */
 
 .editor-pick-card-2 {
   background-image: url("./assets/images/editor-blog-bg-2.jpg");
-  /* padding-left: 20px;
-  padding-right: 20px; */
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  padding: 40px;
 }
-
-
-/* @media (max-width: 800px) {
-  .editor-pick-card-2 {
-    width: 100% ;
-  }
-} */
-
-/* @media (max-width: 1024px) {
-  .editor-pick-card-2 {
-    width: 50% ;
-  }
-} */
 
 .editor-pick-card-3 {
   background-image: url("./assets/images/editor-blog-bg-3.jpg");
-  /* padding-left: 20px;
-  padding-right: 20px; */
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  padding: 40px;
 }
-
-
-/* @media (max-width: 800px) {
-  .editor-pick-card-3 {
-    width: 100% ;
-  }
-} */
-
-/* @media (max-width: 1024px) {
-  .editor-pick-card-3 {
-    width: 50% ;
-  }
-} */
-
 
 
 .editor-pick-date {
@@ -572,35 +646,3 @@ a {
   color: #E5E5E5;
 }
 
-nav {
-  width: 100%;
-  background-color: #00000033;
-  display: flex;
-  flex-wrap: wrap;
-  position: absolute;
-  justify-content: space-between;
-}
-
-label.logo {
-  max-width: 69px;
-  padding-top: 29px;
-  font: spartan;
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 22.4px;
-  color: #F8F9FA;
-}
-
-nav ul {
-  display: flex;
-  flex-wrap: wrap;
-  padding-top: 33px;
-  list-style: none;
-}
-
-nav ul li {
-  font-weight: 700;
-  font-size: 12px;
-  line-height: 14.06px;
-  color: #E5E5E5;
-}
